routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      # Bind to a specific listener in the parentRef (Gateway) using sectionName field.
      # sectionName: https-a-e-c
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: "myapi.example.com"
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: Foo
            value: bar
          set:
          - name: User-Agent
            value: custom
          remove:
          - To-Remove
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          add:
          - name: Foo
            value: bar
          set:
          - name: To-Modify
            value: newvalue
          remove:
          - To-Remove
      backendRefs:
      # Delegate to another HTTPRoute
      - name: httpbin
        namespace: httpbin
        port: 8000
      # # Delegate to another HTTPRoute
      # - group: gateway.networking.k8s.io
      #   kind: HTTPRoute
      #   name: httpbin
      #   namespace: httpbin
