routes/external-echo-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route-echo
  namespace: default
  labels:
    app: tcp-echo
spec:
  parentRefs:
  - name: tcp-gateway
    namespace: ingress-gw
    sectionName: tcp
  rules:
  - backendRefs:
    - name: tcpbin-com
      namespace: default
      group: gateway.kgateway.dev
      kind: Backend
