routes/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https
  namespace: default
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      sectionName: http
  hostnames:
    - "api.example.com"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
